synt.output
Terminals unused in grammar

   COM


Rules useless in parser due to conflicts

   10 TAB: /* empty */

   16 L_CONST1: /* empty */

   29 L_VAR: /* empty */

   35 INS: /* empty */
   39    | /* empty */

   43 affectation: /* empty */

   93 L_INS: /* empty */


State 0 conflicts: 8 shift/reduce, 9 reduce/reduce
State 11 conflicts: 8 shift/reduce, 9 reduce/reduce
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 5 shift/reduce, 9 reduce/reduce
State 16 conflicts: 8 shift/reduce, 9 reduce/reduce
State 24 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 101 conflicts: 4 shift/reduce, 10 reduce/reduce
State 121 conflicts: 4 shift/reduce, 10 reduce/reduce
State 123 conflicts: 4 shift/reduce, 10 reduce/reduce
State 139 conflicts: 1 shift/reduce
State 159 conflicts: 4 shift/reduce, 10 reduce/reduce
State 160 conflicts: 4 shift/reduce, 10 reduce/reduce
State 161 conflicts: 4 shift/reduce, 10 reduce/reduce
State 162 conflicts: 4 shift/reduce, 10 reduce/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 173 conflicts: 4 shift/reduce, 10 reduce/reduce
State 174 conflicts: 4 shift/reduce, 10 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: PRO

    2 PRO: DEC_VAR PRO
    3    | INST PRO
    4    | /* empty */

    5 DEC_VAR: L_CONST1 DEC_VAR
    6        | TAB
    7        | L_VAR
    8        | /* empty */

    9 TAB: TYPE IDF ACOU CST_E ACFER
   10    | /* empty */

   11 TYPE: INTEGER
   12     | FLOAT
   13     | BOOL
   14     | CHAR

   15 L_CONST1: IDF AFFECT CONS
   16         | /* empty */

   17 CONS: CST_CH
   18     | CST_E
   19     | PAROU PLUS CST_E PARFER
   20     | CST_R
   21     | PAROU PLUS CST_R PARFER
   22     | cst_SE
   23     | cst_SR
   24     | bool
   25     | /* empty */

   26 cst_SE: PAROU CST_SE PARFER

   27 cst_SR: PAROU CST_SR PARFER

   28 L_VAR: TYPE L_DEC
   29      | /* empty */

   30 L_DEC: IDF ver L_DEC
   31      | IDF
   32      | /* empty */

   33 INST: INS
   34     | /* empty */

   35 INS: /* empty */
   36    | affectation
   37    | CO
   38    | BOU
   39    | /* empty */

   40 affectation: IDF AFFECT EXP_AR
   41            | IDF AFFECT PAROU EXP_AR PARFER P
   42            | IDF AFFECT IDF
   43            | /* empty */

   44 EXP_AR: IDF EXP
   45       | CST_E EXP
   46       | CST_R EXP
   47       | cst_SE EXP
   48       | cst_SR EXP

   49 EXP: PLUS E4
   50    | E1

   51 E1: MOINS E4
   52   | E2

   53 E2: FOIS E4
   54   | E3

   55 E3: DIV E4

   56 E4: IDF
   57   | CST_E
   58   | CST_R
   59   | cst_SE
   60   | cst_SR
   61   | EXP_AR

   62 P: A PAROU EXP_AR PARFER P
   63  | A IDF
   64  | A CST_E
   65  | A CST_R
   66  | DIV PAROU EXP_AR PARFER P
   67  | DIV IDF
   68  | DIV CST_E
   69  | DIV CST_R
   70  | /* empty */

   71 A: PLUS
   72  | MOINS
   73  | FOIS

   74 cond: id1 CP id1
   75     | PAROU id1 CP id1 PARFER

   76 id1: IDF
   77    | CONS

   78 CP: SUP
   79   | SUPE
   80   | INF
   81   | INFE
   82   | AFFECT
   83   | DIFF

   84 CO: mc_IF PAROU N cond PARFER DEUXP L_INS
   85   | mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS
   86   | mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS
   87   | mc_IF PAROU N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   88   | mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   89   | mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS

   90 N: mc_NOT
   91  | /* empty */

   92 L_INS: INST
   93      | /* empty */

   94 BOU: mc_WHILE PAROU N cond PARFER DEUXP L_INS
   95    | mc_FOR IDF mc_IN IDF DEUXP L_INS
   96    | mc_FOR IDF mc_INRANGE PAROU CST_E ver CST_E PARFER DEUXP L_INS


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOL (258) 13
INTEGER (259) 11
FLOAT (260) 12
CHAR (261) 14
mc_IF (262) 84 85 86 87 88 89
mc_WHILE (263) 94
mc_ELSE (264) 87 88 89
CST_SE (265) 26
CST_E (266) 9 18 19 45 57 64 68 96
mc_FOR (267) 95 96
mc_INRANGE (268) 96
mc_IN (269) 95
mc_AND (270) 85 88
mc_OR (271) 86 89
mc_NOT (272) 90
SUP (273) 78
INF (274) 80
SUPE (275) 79
INFE (276) 81
DIFF (277) 83
PLUS (278) 19 21 49 71
MOINS (279) 51 72
FOIS (280) 53 73
DIV (281) 55 66 67 68 69
ver (282) 30 96
PAROU (283) 19 21 26 27 41 62 66 75 84 85 86 87 88 89 94 96
PARFER (284) 19 21 26 27 41 62 66 75 84 85 86 87 88 89 94 96
ACOU (285) 9
ACFER (286) 9
DEUXP (287) 84 85 86 87 88 89 94 95 96
AFFECT (288) 15 40 41 42 82
IDF (289) 9 15 30 31 40 41 42 44 56 63 67 76 95 96
COM (290)
CST_CH (291) 17
CST_R (292) 20 21 46 58 65 69
CST_SR (293) 27
bool (294) 24


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
S (41)
    on left: 1, on right: 0
PRO (42)
    on left: 2 3 4, on right: 1 2 3
DEC_VAR (43)
    on left: 5 6 7 8, on right: 2 5
TAB (44)
    on left: 9 10, on right: 6
TYPE (45)
    on left: 11 12 13 14, on right: 9 28
L_CONST1 (46)
    on left: 15 16, on right: 5
CONS (47)
    on left: 17 18 19 20 21 22 23 24 25, on right: 15 77
cst_SE (48)
    on left: 26, on right: 22 47 59
cst_SR (49)
    on left: 27, on right: 23 48 60
L_VAR (50)
    on left: 28 29, on right: 7
L_DEC (51)
    on left: 30 31 32, on right: 28 30
INST (52)
    on left: 33 34, on right: 3 92
INS (53)
    on left: 35 36 37 38 39, on right: 33
affectation (54)
    on left: 40 41 42 43, on right: 36
EXP_AR (55)
    on left: 44 45 46 47 48, on right: 40 41 61 62 66
EXP (56)
    on left: 49 50, on right: 44 45 46 47 48
E1 (57)
    on left: 51 52, on right: 50
E2 (58)
    on left: 53 54, on right: 52
E3 (59)
    on left: 55, on right: 54
E4 (60)
    on left: 56 57 58 59 60 61, on right: 49 51 53 55
P (61)
    on left: 62 63 64 65 66 67 68 69 70, on right: 41 62 66
A (62)
    on left: 71 72 73, on right: 62 63 64 65
cond (63)
    on left: 74 75, on right: 84 85 86 87 88 89 94
id1 (64)
    on left: 76 77, on right: 74 75
CP (65)
    on left: 78 79 80 81 82 83, on right: 74 75
CO (66)
    on left: 84 85 86 87 88 89, on right: 37
N (67)
    on left: 90 91, on right: 84 85 86 87 88 89 94
L_INS (68)
    on left: 92 93, on right: 84 85 86 87 88 89 94 95 96
BOU (69)
    on left: 94 95 96, on right: 38


state 0

    0 $accept: . S $end
    1 S: . PRO
    2 PRO: . DEC_VAR PRO
    3    | . INST PRO
    4    | .
    5 DEC_VAR: . L_CONST1 DEC_VAR
    6        | . TAB
    7        | . L_VAR
    8        | .
    9 TAB: . TYPE IDF ACOU CST_E ACFER
   10    | .
   11 TYPE: . INTEGER
   12     | . FLOAT
   13     | . BOOL
   14     | . CHAR
   15 L_CONST1: . IDF AFFECT CONS
   16         | .
   28 L_VAR: . TYPE L_DEC
   29      | .
   33 INST: . INS
   34     | .
   35 INS: .
   36    | . affectation
   37    | . CO
   38    | . BOU
   39    | .
   40 affectation: . IDF AFFECT EXP_AR
   41            | . IDF AFFECT PAROU EXP_AR PARFER P
   42            | . IDF AFFECT IDF
   43            | .
   84 CO: . mc_IF PAROU N cond PARFER DEUXP L_INS
   85   | . mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS
   86   | . mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS
   87   | . mc_IF PAROU N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   88   | . mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   89   | . mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   94 BOU: . mc_WHILE PAROU N cond PARFER DEUXP L_INS
   95    | . mc_FOR IDF mc_IN IDF DEUXP L_INS
   96    | . mc_FOR IDF mc_INRANGE PAROU CST_E ver CST_E PARFER DEUXP L_INS

    BOOL      shift, and go to state 1
    INTEGER   shift, and go to state 2
    FLOAT     shift, and go to state 3
    CHAR      shift, and go to state 4
    mc_IF     shift, and go to state 5
    mc_WHILE  shift, and go to state 6
    mc_FOR    shift, and go to state 7
    IDF       shift, and go to state 8

    $end      reduce using rule 4 (PRO)
    $end      [reduce using rule 8 (DEC_VAR)]
    $end      [reduce using rule 10 (TAB)]
    $end      [reduce using rule 16 (L_CONST1)]
    $end      [reduce using rule 29 (L_VAR)]
    $end      [reduce using rule 34 (INST)]
    $end      [reduce using rule 35 (INS)]
    $end      [reduce using rule 39 (INS)]
    $end      [reduce using rule 43 (affectation)]
    BOOL      [reduce using rule 8 (DEC_VAR)]
    BOOL      [reduce using rule 10 (TAB)]
    BOOL      [reduce using rule 16 (L_CONST1)]
    BOOL      [reduce using rule 29 (L_VAR)]
    BOOL      [reduce using rule 34 (INST)]
    BOOL      [reduce using rule 35 (INS)]
    BOOL      [reduce using rule 39 (INS)]
    BOOL      [reduce using rule 43 (affectation)]
    INTEGER   [reduce using rule 8 (DEC_VAR)]
    INTEGER   [reduce using rule 10 (TAB)]
    INTEGER   [reduce using rule 16 (L_CONST1)]
    INTEGER   [reduce using rule 29 (L_VAR)]
    INTEGER   [reduce using rule 34 (INST)]
    INTEGER   [reduce using rule 35 (INS)]
    INTEGER   [reduce using rule 39 (INS)]
    INTEGER   [reduce using rule 43 (affectation)]
    FLOAT     [reduce using rule 8 (DEC_VAR)]
    FLOAT     [reduce using rule 10 (TAB)]
    FLOAT     [reduce using rule 16 (L_CONST1)]
    FLOAT     [reduce using rule 29 (L_VAR)]
    FLOAT     [reduce using rule 34 (INST)]
    FLOAT     [reduce using rule 35 (INS)]
    FLOAT     [reduce using rule 39 (INS)]
    FLOAT     [reduce using rule 43 (affectation)]
    CHAR      [reduce using rule 8 (DEC_VAR)]
    CHAR      [reduce using rule 10 (TAB)]
    CHAR      [reduce using rule 16 (L_CONST1)]
    CHAR      [reduce using rule 29 (L_VAR)]
    CHAR      [reduce using rule 34 (INST)]
    CHAR      [reduce using rule 35 (INS)]
    CHAR      [reduce using rule 39 (INS)]
    CHAR      [reduce using rule 43 (affectation)]
    mc_IF     [reduce using rule 8 (DEC_VAR)]
    mc_IF     [reduce using rule 10 (TAB)]
    mc_IF     [reduce using rule 16 (L_CONST1)]
    mc_IF     [reduce using rule 29 (L_VAR)]
    mc_IF     [reduce using rule 34 (INST)]
    mc_IF     [reduce using rule 35 (INS)]
    mc_IF     [reduce using rule 39 (INS)]
    mc_IF     [reduce using rule 43 (affectation)]
    mc_WHILE  [reduce using rule 8 (DEC_VAR)]
    mc_WHILE  [reduce using rule 10 (TAB)]
    mc_WHILE  [reduce using rule 16 (L_CONST1)]
    mc_WHILE  [reduce using rule 29 (L_VAR)]
    mc_WHILE  [reduce using rule 34 (INST)]
    mc_WHILE  [reduce using rule 35 (INS)]
    mc_WHILE  [reduce using rule 39 (INS)]
    mc_WHILE  [reduce using rule 43 (affectation)]
    mc_FOR    [reduce using rule 8 (DEC_VAR)]
    mc_FOR    [reduce using rule 10 (TAB)]
    mc_FOR    [reduce using rule 16 (L_CONST1)]
    mc_FOR    [reduce using rule 29 (L_VAR)]
    mc_FOR    [reduce using rule 34 (INST)]
    mc_FOR    [reduce using rule 35 (INS)]
    mc_FOR    [reduce using rule 39 (INS)]
    mc_FOR    [reduce using rule 43 (affectation)]
    IDF       [reduce using rule 8 (DEC_VAR)]
    IDF       [reduce using rule 10 (TAB)]
    IDF       [reduce using rule 16 (L_CONST1)]
    IDF       [reduce using rule 29 (L_VAR)]
    IDF       [reduce using rule 34 (INST)]
    IDF       [reduce using rule 35 (INS)]
    IDF       [reduce using rule 39 (INS)]
    IDF       [reduce using rule 43 (affectation)]
    $default  reduce using rule 4 (PRO)

    S            go to state 9
    PRO          go to state 10
    DEC_VAR      go to state 11
    TAB          go to state 12
    TYPE         go to state 13
    L_CONST1     go to state 14
    L_VAR        go to state 15
    INST         go to state 16
    INS          go to state 17
    affectation  go to state 18
    CO           go to state 19
    BOU          go to state 20


state 1

   13 TYPE: BOOL .

    $default  reduce using rule 13 (TYPE)


state 2

   11 TYPE: INTEGER .

    $default  reduce using rule 11 (TYPE)


state 3

   12 TYPE: FLOAT .

    $default  reduce using rule 12 (TYPE)


state 4

   14 TYPE: CHAR .

    $default  reduce using rule 14 (TYPE)


state 5

   84 CO: mc_IF . PAROU N cond PARFER DEUXP L_INS
   85   | mc_IF . PAROU N cond mc_AND N cond PARFER DEUXP L_INS
   86   | mc_IF . PAROU N cond mc_OR N cond PARFER DEUXP L_INS
   87   | mc_IF . PAROU N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   88   | mc_IF . PAROU N cond mc_AND N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   89   | mc_IF . PAROU N cond mc_OR N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS

    PAROU  shift, and go to state 21


state 6

   94 BOU: mc_WHILE . PAROU N cond PARFER DEUXP L_INS

    PAROU  shift, and go to state 22


state 7

   95 BOU: mc_FOR . IDF mc_IN IDF DEUXP L_INS
   96    | mc_FOR . IDF mc_INRANGE PAROU CST_E ver CST_E PARFER DEUXP L_INS

    IDF  shift, and go to state 23


state 8

   15 L_CONST1: IDF . AFFECT CONS
   40 affectation: IDF . AFFECT EXP_AR
   41            | IDF . AFFECT PAROU EXP_AR PARFER P
   42            | IDF . AFFECT IDF

    AFFECT  shift, and go to state 24


state 9

    0 $accept: S . $end

    $end  shift, and go to state 25


state 10

    1 S: PRO .

    $default  reduce using rule 1 (S)


state 11

    2 PRO: . DEC_VAR PRO
    2    | DEC_VAR . PRO
    3    | . INST PRO
    4    | .
    5 DEC_VAR: . L_CONST1 DEC_VAR
    6        | . TAB
    7        | . L_VAR
    8        | .
    9 TAB: . TYPE IDF ACOU CST_E ACFER
   10    | .
   11 TYPE: . INTEGER
   12     | . FLOAT
   13     | . BOOL
   14     | . CHAR
   15 L_CONST1: . IDF AFFECT CONS
   16         | .
   28 L_VAR: . TYPE L_DEC
   29      | .
   33 INST: . INS
   34     | .
   35 INS: .
   36    | . affectation
   37    | . CO
   38    | . BOU
   39    | .
   40 affectation: . IDF AFFECT EXP_AR
   41            | . IDF AFFECT PAROU EXP_AR PARFER P
   42            | . IDF AFFECT IDF
   43            | .
   84 CO: . mc_IF PAROU N cond PARFER DEUXP L_INS
   85   | . mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS
   86   | . mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS
   87   | . mc_IF PAROU N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   88   | . mc_IF PAROU N cond mc_AND N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   89   | . mc_IF PAROU N cond mc_OR N cond PARFER DEUXP L_INS mc_ELSE DEUXP L_INS
   94 BOU: . mc_WHILE PAROU N cond PARFER DEUXP L_INS
   95    | . mc_FOR IDF mc_IN IDF DEUXP L_INS
   96    | . mc_FOR IDF mc_INRANGE PAROU CST_E ver CST_E PARFER DEUXP L_INS

    BOOL      shift, and go to state 1
    INTEGER   shift, and go to state 2
    FLOAT     shift, and go to state 3
    CHAR      shift, and go to state 4
    mc_IF     shift, and go to state 5
    mc_WHILE  shift, and go to state 6
    mc_FOR    shift, and go to state 7
    IDF       shift, and go to state 8

    $end      reduce using rule 4 (PRO)
    $end      [reduce using rule 8 (DEC_VAR)]
    $end      [reduce using rule 10 (TAB)]
    $end      [reduce using rule 16 (L_CONST1)]
    $end      [reduce using rule 29 (L_VAR)]
    $end      [reduce using rule 34 (INST)]
    $end      [reduce using rule 35 (INS)]
    $end      [reduce using rule 39 (INS)]
    $end      [reduce using rule 43 (affectation)]
    BOOL      [reduce using rule 8 (DEC_VAR)]
    BOOL      [reduce using rule 10 (TAB)]
    BOOL      [reduce using rule 16 (L_CONST1)]
    BOOL      [reduce using rule 29 (L_VAR)]
    BOOL      [reduce using rule 34 (INST)]
    BOOL      [reduce using rule 35 (INS)]
    BOOL      [reduce using rule 39 (INS)]
    BOOL      [reduce using rule 43 (affectation)]
    INTEGER   [reduce using rule 8 (DEC_VAR)]
    INTEGER   [reduce using rule 10 (TAB)]
    INTEGER   [reduce using rule 16 (L_CONST1)]
    INTEGER   [reduce using rule 29 (L_VAR)]
    INTEGER   [reduce using rule 34 (INST)]
    INTEGER   [reduce using rule 35 (INS)]
    INTEGER   [reduce using rule 39 (INS)]
    INTEGER   [reduce using rule 43 (affectation)]
    FLOAT     [reduce using rule 8 (DEC_VAR)]
    FLOAT     [reduce using rule 10 (TAB)]
    FLOAT     [reduce using rule 16 (L_CONST1)]
    FLOAT     [reduce using rule 29 (L_VAR)]
    FLOAT     [reduce using rule 34 (INST)]
    FLOAT     [reduce using rule 35 (INS)]
    FLOAT     [reduce using rule 39 (INS)]
    FLOAT     [reduce using rule 43 (affectation)]
    CHAR      [reduce using rule 8 (DEC_VAR)]
    CHAR      [reduce using rule 10 (TAB)]
    CHAR      [reduce using rule 16 (L_CONST1)]
    CHAR      [reduce using rule 29 (L_VAR)]
    CHAR      [reduce using rule 34 (INST)]
    CHAR      [reduce using rule 35 (INS)]
    CHAR      [reduce using rule 39 (INS)]
    CHAR      [reduce using rule 43 (affectation)]
    mc_IF     [reduce using rule 8 (DEC_VAR)]
    mc_IF     [reduce using rule 10 (TAB)]
    mc_IF     [reduce using rule 16 (L_CONST1)]
    mc_IF     [reduce using rule 29 (L_VAR)]
    mc_IF     [reduce using rule 34 (INST)]
    mc_IF     [reduce using rule 35 (INS)]
    mc_IF     [reduce using rule 39 (INS)]
    mc_IF     [reduce using rule 43 (affectation)]
    mc_WHILE  [reduce using rule 8 (DEC_VAR)]
    mc_WHILE  [reduce using rule 10 (TAB)]
    mc_WHILE  [reduce using rule 16 (L_CONST1)]
    mc_WHILE  [reduce using rule 29 (L_VAR)]
    mc_WHILE  [reduce using rule 34 (INST)]
    mc_WHILE  [reduce using rule 35 (INS)]
    mc_WHILE  [reduce using rule 39 (INS)]
    mc_WHILE  [reduce using rule 43 (affectation)]
    mc_FOR    [reduce using rule 8 (DEC_VAR)]
    mc_FOR    [reduce using rule 10 (TAB)]
    mc_FOR    [reduce using rule 16 (L_CONST1)]
    mc_FOR    [reduce using rule 29 (L_VAR)]
    mc_FOR    [reduce using rule 34 (INST)]
    mc_FOR    [reduce using rule 35 (INS)]
    mc_FOR    [reduce using rule 39 (INS)]
    mc_FOR    [reduce using rule 43 (affectation)]
    IDF       [reduce using rule 8 (DEC_VAR)]
    IDF       [reduce using rule 10 (TAB)]
    IDF       [reduce using rule 16 (L_CONST1)]
    IDF       [reduce using rule 29 (L_VAR)]
    IDF       [reduce using rule 34 (INST)]
    IDF       [reduce using rule 35 (INS)]
    IDF       [reduce using rule 39 (INS)]
    IDF       [reduce using rule 43 (affectation)]
    $default  reduce using rule 4 (PRO)

    PRO          go to state 26
    DEC_VAR      go to state 11
    TAB          go to state 12
    TYPE         go to state 13
    L_CONST1     go to state 14
    L_VAR        go to state 15
    INST         go to state 16
    INS          go to state 17
    affectation  go to state 18
    CO           go to state 19
    BOU          go to state 20


state 12

    6 DEC_VAR: TAB .

    $default  reduce using rule 6 (DEC_VAR)


state 13

    9 TAB: TYPE . IDF ACOU CST_E ACFER
   28 L_VAR: TYPE . L_DEC
   30 L_DEC: . IDF ver L_DEC
   31      | . IDF
   32      | .

    IDF  shift, and go to state 27

    IDF       [reduce using rule 32 (L_DEC)]
    $default  reduce using rule 32 (L_DEC)

    L_DEC  go to state 28


state 14

    5 DEC_VAR: . L_CONST1 DEC_VAR
    5        | L_CONST1 . DEC_VAR
    6        | . TAB
    7        | . L_VAR
    8        | .
    9 TAB: . TYPE IDF ACOU CST_E ACFER
   10    | .
   11 TYPE: . INTEGER
   12     | . FLOAT
   13     | . BOOL
   14     | . CHAR
   15 L_CONST1: . IDF AFFECT CONS
   16         | .
   28 L_VAR: . TYPE L_DEC
   29      | .

    BOOL     shift, and go to state 1
    INTEGER  shift, and go to state 2
    FLOAT    shift, and go to state 3
    CHAR     shift, and go to state 4
    IDF      shift, and go to state 29
